--- a/gd.html
+++ b/gd.html
@@ -40,7 +40,7 @@
 						<header>
 							<h1><strong>Nielisson Mendonça</strong></h1>
 						</header>
-						<p>Game Designer</p>
+						<p>Game &Aacute; Level Designer</p>
 						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 
