--- a/gd.html
+++ b/gd.html
@@ -22,7 +22,7 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Home</a></li>
-				<li><a href="#gamedesign">Game Design</a></li>
+				<li><a href="#gamedesign">Game &Aacute; Level Design</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#blog">Blog</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -66,10 +66,10 @@
 		<article id="gamedesign" class="wrapper style5">
 			<div class="container">
 				<header>
-					<h2>Game Design</h2>
+					<h2>Game &Aacute; Level Design</h2>
 					<p>
-						I'm thrilled to present a selection of my featured Game Design projects that I'm able to share in my portfolio.
-						Even though I worked on the Game Design of most of the games mentioned above, I didn't produce a GDD for each one of them.
+						I'm thrilled to present a selection of my featured Game &Aacute; Level Design projects that I'm able to share in my portfolio.
+						Even though I worked on the Game Design of most of my games, I didn't produce a GDD for each one of them.
 						Additionally, I've worked on some Game Design Documents (GDDs) for my clients under non-disclosure agreements (NDAs),
 						which I'm unable to disclose.
 					</p>
@@ -82,10 +82,10 @@
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>Professional Project</i></p>
 							<p>
-								I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
+								I played a key role in various aspects of the Game Design for "My Lovely Planet and the Level Design of the new mini-games," with a particular focus on developing
 								engaging mini-games. Unfortunately, I cannot disclose the documents.
 							</p>
-							<p>Roles: <b><font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#f06f4f>Game & Level Design</font></b></p>
 							<p>Team composition: ~12 people</p>
 							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
@@ -98,7 +98,7 @@
 							<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">SpotterZ by Jeux & Co</a></h3>
 							<p>Professional Projet</p>
 							<p>Crafted for <a href="https://www.jeuxandco.com/" target="_blank">Jeu & Co</a>, this 16-page Game Design Document (GDD) encapsulates the entire concept for their upcoming project.</p>
-							<p>Roles: <b><font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#f06f4f>Game & Level Design</font></b></p>
 							<center><a href="/documents/GDD_01_SpotterZ.pdf" class="button small scrolly" target="_blank">GDD</a></center>
 						</article>
 					</div>
@@ -126,7 +126,7 @@
 								design situations, and gameplay loops, everything is intricately woven around this central theme. It offers a
 								comprehensive glimpse into the structure and depth of my GDDs.
 							</p>
-							<p>Roles: <b><font color=#1a4f63>2D Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+							<p>Roles: <font color=#f06f4f>Game and Level Design</font></b></p>
 							<p>Team composition: 2 people</p>
 							<a href="/documents/GDD_05_RABBOTS.pdf" class="button small scrolly" target="_blank">GDD</a>
 							<a href="https://magiccoding.itch.io/rabbots" class="button small scrolly" target="_blank">Play</a>
@@ -179,7 +179,7 @@
 							<p>
 								I've wrote the Game Design Document for this mobile game, including the art direction.
 							</p>
-							<p>Roles: <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <font color=#f06f4f>Game & Level Design</font></b></p>
 							<p>Solo project</p>
 							<center>
 								<a href="/documents/GDD_07_Potion_Perplexion.pdf" class="button small scrolly" target="_blank">GDD</a>
@@ -244,10 +244,10 @@
 							<!-- <span class="icon featured fa-comments"></span>//-->
 							<img src="images/icon_game.png" width="300" height="300" alt="">
 
-							<h3>Game Design</h3>
+							<h3>Game & Level Design</h3>
 							<br>
 							<p align="justify">
-								Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools
+								Having completed a master's degree in Fine Arts with a specialization in Game Design and Licence Professionnelle en Game et Level Design, I have acquired all the tools
 								needed to create a coherent and meaningful design for different genres of games. I am also acquainted with the "coziness" concept and the
 								procedural rhetoric which I have studied in depth throughout my academic years.
 							</p>
