--- a/gd.html
+++ b/gd.html
@@ -22,7 +22,7 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Home</a></li>
-				<li><a href="#gamedesign">Game &Aacute; Level Design</a></li>
+				<li><a href="#gamedesign">Game and Level Design</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#blog">Blog</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
 						<header>
 							<h1><strong>Nielisson Mendonça</strong></h1>
 						</header>
-						<p>Game &Aacute; Level Designer</p>
+						<p>Game and Level Designer</p>
 						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 
@@ -66,9 +66,9 @@
 		<article id="gamedesign" class="wrapper style5">
 			<div class="container">
 				<header>
-					<h2>Game &Aacute; Level Design</h2>
+					<h2>Game and Level Design</h2>
 					<p>
-						I'm thrilled to present a selection of my featured Game &Aacute; Level Design projects that I'm able to share in my portfolio.
+						I'm thrilled to present a selection of my featured Game and; Level Design projects that I'm able to share in my portfolio.
 						Even though I worked on the Game Design of most of my games, I didn't produce a GDD for each one of them.
 						Additionally, I've worked on some Game Design Documents (GDDs) for my clients under non-disclosure agreements (NDAs),
 						which I'm unable to disclose.
@@ -96,7 +96,7 @@
 						<article class="box style2">
 							<a href="/documents/GDD_01_SpotterZ.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jeuxgeo.png" alt="SpotterZ" /></a>
 							<h3><a href="/documents/GDD_01_SpotterZ.pdf" target="_blank">SpotterZ by Jeux & Co</a></h3>
-							<p>Professional Projet</p>
+							<p style="font-size: small;"><i>Professional Project</i></p>
 							<p>Crafted for <a href="https://www.jeuxandco.com/" target="_blank">Jeu & Co</a>, this 16-page Game Design Document (GDD) encapsulates the entire concept for their upcoming project.</p>
 							<p>Roles: <b><font color=#f06f4f>Game & Level Design</font></b></p>
 							<center><a href="/documents/GDD_01_SpotterZ.pdf" class="button small scrolly" target="_blank">GDD</a></center>
@@ -158,7 +158,7 @@
 						<article class="box style2">
 							<a href="/documents/GDD_08_Kolor_Realm.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/thumbnail_kolor_realm.png" alt="Kolor Realm" /></a>
 							<h3><a href="/documents/GDD_08_Kolor_Realm.pdf" target="_blank">Kolor Realm - Game Design</a></h3>
-							<p>Professional project - 05/2022</p>
+							<p style="font-size: small;"><i>Professional Project</i></p>
 							<p>
 								I've written the Game Design Document for this mobile game, with a focus on the level design.
 							</p>
@@ -175,7 +175,7 @@
 						<article class="box style2">
 							<a href="/documents/GDD_07_Potion_Perplexion.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/potion_perplexion.png" alt="Potion Perplexion" /></a>
 							<h3><a href="/documents/GDD_07_Potion_Perplexion.pdf" target="_blank">Potion Perplexion - Game Design</a></h3>
-							<p>Professional project - 02/2022</p>
+							<p style="font-size: small;"><i>Professional Project</i></p>
 							<p>
 								I've wrote the Game Design Document for this mobile game, including the art direction.
 							</p>
