--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1cc4f777304729.5c844a637ae27.gif" alt="" /></a>
+							<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/pendulum.gif" alt="" /></a>
 							<h3><a href="https://nielisson.itch.io/pendulum" target="_blank">Pendulum</a></h3>
 							<p style="font-size: small;"><i>Extra Credits Holiday 2018</i></p>
 							<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
