--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
+							<a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jolibrain.png" alt="" /></a>
+							<h3><a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" target="_blank">Jolibrain - jeux cerebraux</a></h3>
+							<p style="font-size: small;"><i>2024</i></p>
+							<p>JoliBrain, ce sont 5 jeux en 3D (et une vingtaine à venir d'ici la fin de l'année) qui dynamisent votre cerveau et 
+							plus particulièrement votre mémoire. </p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D art</font></b></p>
+							<p>Team composition: ~5 people</p>
+							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
+							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
+						</article>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
 							<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
 							<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">Little Big Feud</a></h3>
 							<p style="font-size: small;"><i>Game Offf 2023</i></p>
