--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 							plus particulièrement votre mémoire. </p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D art</font></b></p>
 							<p>Team composition: ~5 people</p>
-							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
+							<a href="https://www.youtube.com/watch?v=PSj_G8-w7XI&t=1s" class="button small scrolly" target="_blank">Watch</a>
+							<a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" class="button small scrolly" target="_blank">Play</a>
 						</article>
 					</div>
 
