--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jolibrain.png" alt="" /></a>
+							<a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jolibrain.jpg" alt="" /></a>
 							<h3><a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" target="_blank">Jolibrain - jeux cerebraux</a></h3>
 							<p style="font-size: small;"><i>2024</i></p>
 							<p>JoliBrain, ce sont 5 jeux en 3D (et une vingtaine à venir d'ici la fin de l'année) qui dynamisent votre cerveau et 
