--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023 (one year)</i></p>
-							<p>A F2P mobile game where your actions in game have an impact in real life!</p>
+							<p>Developed intuitive UI/UX and 2D assets, contributing to the game design of a F2P mobile game where in-game actions 
+							create real-life impact.</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: ~12 people</p>
 							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
@@ -113,8 +114,7 @@
 							<a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/jolibrain.jpg" alt="" /></a>
 							<h3><a href="https://play.google.com/store/apps/details?id=com.bright.brain_games&hl=ln" target="_blank">Jolibrain - jeux cerebraux</a></h3>
 							<p style="font-size: small;"><i>2024</i></p>
-							<p>JoliBrain, ce sont 5 jeux en 3D (et une vingtaine à venir d'ici la fin de l'année) qui dynamisent votre cerveau et 
-							plus particulièrement votre mémoire. </p>
+							<p>Designed the platform's UI/UX and rendered some 3D assets, focusing on seamless navigation and a cohesive user experience.</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D art</font></b></p>
 							<p>Team composition: ~5 people</p>
 							<a href="https://www.youtube.com/watch?v=PSj_G8-w7XI&t=1s" class="button small scrolly" target="_blank">Watch</a>
