--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 							<p>Fight back for your village as a small elf in a big world!</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D Art</font></b></p>
 							<p>Team composition: 4 people</p>
-							<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://www.youtube.com/watch?v=SzrOQtFhx7U" class="button small scrolly" target="_blank">Play</a>
+							<a href="https://youtu.be/SzrOQtFhx7U" class="button small scrolly" target="_blank">Watch</a>
+							<a href="https://nielisson.itch.io/abuelas-space-bistro" class="button small scrolly" target="_blank">Play</a>
 						</article>
 					</div>
 
