--- a/index.html
+++ b/index.html
@@ -620,9 +620,8 @@
 				</div>
 
 				<ul id="copyright">
-					<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li>
+					<li><font size="2">Copyright &copy; 2025 Nielisson Mendonça. All rights reserved.</li>
 					<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
-
 				</ul>
 			</footer>
 
