--- a/index.html
+++ b/index.html
@@ -84,6 +84,44 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
+							<a href="https://vize.social/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/logo_vize.png" alt="" /></a>
+							<h3><a href="https://vize.social/" target="_blank">Vize</a></h3>
+							<p style="font-size: small;"><i>2024-2025</i></p>
+							<p>Using Figma, I created mockups, prototypes, and user flows to design a seamless user experience. The app is currently in its Beta phase, with ongoing testing and refinement.</p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX Design</font></b></p>
+							<p>Team composition: ~3 people</p>
+							<a href="https://vize.social/" class="button small scrolly" target="_blank">Learn More</a>
+						</article>
+					</div>
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://www.instagram.com/vestigegame/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/vestige.png" alt="" /></a>
+							<h3><a href="https://www.instagram.com/vestigegame/" target="_blank">Vestige</a></h3>
+							<p style="font-size: small;"><i>2024-2025</i></p>
+							<p>Blockout, concept sketches, and integration of narrative 3D environments in Unreal Engine.</p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX Design</font></b></p>
+							<p>Team composition: ~14 people</p>
+							<a href="https://www.instagram.com/vestigegame/" class="button small scrolly" target="_blank">Learn More</a>
+						</article>
+					</div>
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://www.fusionjeunesse.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/fj.png" alt="" /></a>
+							<h3><a href="https://www.fusionjeunesse.org/" target="_blank">Fusion Jeunesse</a></h3>
+							<p style="font-size: small;"><i>2024-2025</i></p>
+							<p>Atelier de robotique et d'initiation à la programmation pour des élèves de 12 à 15 ans.</p>
+							<p>Roles: <b><font color=#1a4f63>Enseignant / Coordinateur</font></b></p>
+							<p>Team composition: Entre 30 et 60 salariés (France)</p>
+							<a href="https://www.fusionjeunesse.org/" class="button small scrolly" target="_blank">Learn More</a>
+						</article>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023 (one year)</i></p>
