--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<p>Using Figma, I created mockups, prototypes, and user flows to design a seamless user experience. The app is currently in its Beta phase, with ongoing testing and refinement.</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX Design</font></b></p>
 							<p>Team composition: ~3 people</p>
-							<a href="https://vize.social/" class="button small scrolly" target="_blank">Learn More</a>
+							<center><a href="https://vize.social/" class="button small scrolly" target="_blank">Learn More</a></center>
 						</article>
 					</div>
 
@@ -103,7 +103,7 @@
 							<p>Blockout, concept sketches, and integration of narrative 3D environments in Unreal Engine.</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX Design</font></b></p>
 							<p>Team composition: ~14 people</p>
-							<a href="https://www.instagram.com/vestigegame/" class="button small scrolly" target="_blank">Learn More</a>
+							<center><a href="https://www.instagram.com/vestigegame/" class="button small scrolly" target="_blank">Learn More</a></center>
 						</article>
 					</div>
 
@@ -116,7 +116,7 @@
 							<p>Atelier de robotique et d'initiation à la programmation pour des élèves de 12 à 15 ans.</p>
 							<p>Roles: <b><font color=#1a4f63>Enseignant / Coordinateur</font></b></p>
 							<p>Team composition: Entre 30 et 60 salariés (France)</p>
-							<a href="https://www.fusionjeunesse.org/" class="button small scrolly" target="_blank">Learn More</a>
+							<center><a href="https://www.fusionjeunesse.org/" class="button small scrolly" target="_blank">Learn More</a></center>
 						</article>
 					</div>
 
