--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 							<a href="https://www.fusionjeunesse.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/fj.png" alt="" /></a>
 							<h3><a href="https://www.fusionjeunesse.org/" target="_blank">Fusion Jeunesse</a></h3>
 							<p style="font-size: small;"><i>2024-2025</i></p>
-							<p>Atelier de robotique et d'initiation à la programmation pour des élèves de 12 à 15 ans.</p>
+							<p>Robotics and coding introduction workshop for students aged 12 to 15.</p>
 							<p>Roles: <b><font color=#1a4f63>Enseignant / Coordinateur</font></b></p>
-							<p>Team composition: Entre 30 et 60 salariés (France)</p>
+							<p>Team composition: Between 30 and 60 employees in France</p>
 							<center><a href="https://www.fusionjeunesse.org/" class="button small scrolly" target="_blank">Learn More</a></center>
 						</article>
 					</div>
