--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
 						</article>
 					</div>
 
+
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://marine-snow.co/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/marine_snow.png" alt="" /></a>
+							<h3><a href="https://marine-snow.co/" target="_blank">Marine Snow</a></h3>
+							<p style="font-size: small;"><i>2022</i></p>
+							<p>Initially tasked with Game Design responsibilities, I later expanded my role to encompass the app's UI/UX and 3D art.</p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D art</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Team composition: ~15 people</p>
+							<center><a href="https://marine-snow.co/" class="button small scrolly" target="_blank">Learn More</a></center>
+						</article>
+					</div>
+
+
+
+
+
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
 							<a href="https://store.steampowered.com/app/606880/GreedFall/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
