--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 							<h3><a href="https://www.instagram.com/vestigegame/" target="_blank">Vestige</a></h3>
 							<p style="font-size: small;"><i>2024-2025</i></p>
 							<p>Blockout, concept sketches, and integration of narrative 3D environments in Unreal Engine.</p>
-							<p>Roles: <b><font color=#1a4f63>UI/UX Design</font></b></p>
-							<p>Team composition: ~14 people</p>
+							<p>Role: <b><font color=#f06f4f>Level Designer</font></b></p>
+							<p>Team composition: ~10 people</p>
 							<center><a href="https://www.instagram.com/vestigegame/" class="button small scrolly" target="_blank">Learn More</a></center>
 						</article>
 					</div>
